tests/ui/consts/mir_check_nonconst.stderr
error[E0015]: cannot call non-const function `bar` in statics
  --> $DIR/mir_check_nonconst.rs:8:19
   |
LL | static foo: Foo = bar();
   |                   ^^^^^
   |
   = note: calls in statics are limited to constant functions, tuple structs and tuple variants
   = note: consider wrapping this expression in `std::sync::LazyLock::new(|| ...)`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0015`.
